| Bug #7594 | query_cache_wlock_invalidate is settable but not viewable in 4.0.19-4.0.23 | ||
|---|---|---|---|
| Submitted: | 30 Dec 2004 21:37 | Modified: | 11 Jan 2005 21:26 |
| Reporter: | Matthew Lord | ||
| Status: | Closed | ||
| Category: | Server | Severity: | S3 (Non-critical) |
| Version: | 4.0.19-.23 | OS: | Any (all) |
| Assigned to: | Jim Winstead | Target Version: | |
[30 Dec 2004 21:37]
Matthew Lord
[1 Jan 2005 1:16]
Miguel Solorzano
Thank you for the bug report.
[4 Jan 2005 2:46]
Jim Winstead
It was already visible in 4.1, just added line to 4.0 tree to make it visible there.
[4 Jan 2005 17:30]
Jim Winstead
Fixed in 4.0 tree.
[11 Jan 2005 21:26]
Paul DuBois
Mentioned in 4.0.24 change notes.
