Make query_cache_wlock_invalidate visible in SHOW VARIABLES (Bug #7594)